force-app/main/default/objects/DG_Service_Approvers_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>DGVP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DGVP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Requester_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Requester Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Requester_Type__c</fullName>
        <label>Requester Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Staff</fullName>
                    <default>true</default>
                    <label>Staff</label>
                </value>
                <value>
                    <fullName>Section Head</fullName>
                </value>
                <value>
                    <fullName>VP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requester_VP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Requester VP</label>
        <type>Checkbox</type>
    </fields>
    <label>DG Service Approvers</label>
</CustomObject>